<resources>
    <string name="app_name">Movie Finder</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="explore">EXPLORE</string>
    <string name="search">SEARCH</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="trending_series_text">Trending Series</string>
    <string name="search_by_name">Search by Name</string>
    <string name="home_button">Home Button</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log in</string>
</resources>